<resources>
    <string name="app_name">School Knowledge</string>
    <string name="app_version" translatable="false">v0.0.1</string>
    <string name="app_info">by Ivan ROGER - WIP</string>

    <string name="action_settings">Paramètres</string>

    <string name="login_user_new">Nouveau Compte</string>
    <string name="login_user_anonymous_name">Invité</string>
    <string name="login_user_anonymous_info">Jouez sans enregistrer le score</string>

    <string name="new_user_name_label">Votre nom :</string>
    <string name="new_user_pic_label">Séléctionnez une image</string>

    <string name="new_user_submit">Créer le compte</string>
    <string name="user_logout">Déconnexion</string>

    <string name="wrong_username">Nom invalide !</string>

    <string name="play_game_label">Séléctionnez un jeu:</string>

    <string name="level_select">Séléctionnez un niveau</string>

    <string name="exercise_abort_info">Vous avez abandonné.</string>

    <string name="replay">Rejouer</string>

    <string name="quit">Retour</string>

    <string name="exercise_result_title">Fin de l\'exercice</string>

    <string name="exercise_result_correction">Correction</string>
</resources>
