<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controler.ActivityLogin">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/login_app_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:src="@mipmap/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/login_app_name"
        android:layout_below="@+id/login_app_logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/app_info"
        android:id="@+id/login_app_info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/app_version"
        android:id="@+id/login_app_version"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <include
        layout="@layout/layout_user_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_user_anonymous"
        android:layout_below="@+id/login_app_name"
        android:onClick="onAnonymousLogin" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_user_list"
        android:layout_below="@+id/login_user_anonymous"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_user_new">
    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_user_new"
        android:id="@+id/login_user_new"
        android:layout_above="@+id/login_app_info"
        android:layout_centerHorizontal="true"
        android:onClick="onUserNew"/>

</RelativeLayout>
