<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rogeri.schoolknowledge.controler.ActivityNewUser">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_user_name_label"
        android:id="@+id/new_user_name_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/new_user_name_input"
        android:layout_below="@+id/new_user_name_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_user_pic_label"
        android:id="@+id/new_user_pic_label"
        android:layout_below="@+id/new_user_name_input"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_pic_label"
        android:id="@+id/new_user_pic_table"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center"></LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_submit"
        android:id="@+id/new_user_submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSubmit"/>
</RelativeLayout>
